; ModuleID = '/home/carl/AnghaBench/reactos/base/applications/cmdutils/chcp/extr_chcp.c_wmain.c'
source_filename = "/home/carl/AnghaBench/reactos/base/applications/cmdutils/chcp/extr_chcp.c_wmain.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [3 x i32] [i32 47, i32 63, i32 0], align 4
@StdOut = common dso_local global i32 0, align 4
@STRING_CHCP_HELP = common dso_local global i32 0, align 4
@STRING_CHCP_ERROR1 = common dso_local global i32 0, align 4
@StdErr = common dso_local global i32 0, align 4
@STRING_ERROR_INVALID_PARAM_FORMAT = common dso_local global i32 0, align 4
@STRING_CHCP_ERROR4 = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @wmain(i32 %0, i32** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32**, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  store i32 %0, i32* %4, align 4
  store i32** %1, i32*** %5, align 8
  %8 = call i32 (...) @ConInitStdStreams()
  %9 = load i32, i32* %4, align 4
  %10 = icmp sgt i32 %9, 1
  br i1 %10, label %11, label %21

11:                                               ; preds = %2
  %12 = load i32**, i32*** %5, align 8
  %13 = getelementptr inbounds i32*, i32** %12, i64 1
  %14 = load i32*, i32** %13, align 8
  %15 = call i64 @wcscmp(i32* %14, i8* bitcast ([3 x i32]* @.str to i8*))
  %16 = icmp eq i64 %15, 0
  br i1 %16, label %17, label %21

17:                                               ; preds = %11
  %18 = load i32, i32* @StdOut, align 4
  %19 = load i32, i32* @STRING_CHCP_HELP, align 4
  %20 = call i32 @ConResPuts(i32 %18, i32 %19)
  store i32 0, i32* %3, align 4
  br label %75

21:                                               ; preds = %11, %2
  %22 = load i32, i32* %4, align 4
  %23 = icmp eq i32 %22, 1
  br i1 %23, label %24, label %29

24:                                               ; preds = %21
  %25 = load i32, i32* @StdOut, align 4
  %26 = load i32, i32* @STRING_CHCP_ERROR1, align 4
  %27 = call i32* (...) @GetConsoleOutputCP()
  %28 = call i32 @ConResPrintf(i32 %25, i32 %26, i32* %27)
  store i32 0, i32* %3, align 4
  br label %75

29:                                               ; preds = %21
  %30 = load i32, i32* %4, align 4
  %31 = icmp sgt i32 %30, 2
  br i1 %31, label %32, label %39

32:                                               ; preds = %29
  %33 = load i32, i32* @StdErr, align 4
  %34 = load i32, i32* @STRING_ERROR_INVALID_PARAM_FORMAT, align 4
  %35 = load i32**, i32*** %5, align 8
  %36 = getelementptr inbounds i32*, i32** %35, i64 2
  %37 = load i32*, i32** %36, align 8
  %38 = call i32 @ConResPrintf(i32 %33, i32 %34, i32* %37)
  store i32 1, i32* %3, align 4
  br label %75

39:                                               ; preds = %29
  %40 = load i32**, i32*** %5, align 8
  %41 = getelementptr inbounds i32*, i32** %40, i64 1
  %42 = load i32*, i32** %41, align 8
  %43 = call i64 @_wtoi(i32* %42)
  store i64 %43, i64* %7, align 8
  %44 = load i64, i64* %7, align 8
  %45 = icmp eq i64 %44, 0
  br i1 %45, label %46, label %53

46:                                               ; preds = %39
  %47 = load i32, i32* @StdErr, align 4
  %48 = load i32, i32* @STRING_ERROR_INVALID_PARAM_FORMAT, align 4
  %49 = load i32**, i32*** %5, align 8
  %50 = getelementptr inbounds i32*, i32** %49, i64 1
  %51 = load i32*, i32** %50, align 8
  %52 = call i32 @ConResPrintf(i32 %47, i32 %48, i32* %51)
  store i32 1, i32* %3, align 4
  br label %75

53:                                               ; preds = %39
  %54 = call i64 (...) @GetConsoleCP()
  store i64 %54, i64* %6, align 8
  %55 = load i64, i64* %7, align 8
  %56 = call i64 @SetConsoleCP(i64 %55)
  %57 = icmp ne i64 %56, 0
  br i1 %57, label %58, label %71

58:                                               ; preds = %53
  %59 = load i64, i64* %7, align 8
  %60 = call i64 @SetConsoleOutputCP(i64 %59)
  %61 = icmp ne i64 %60, 0
  br i1 %61, label %62, label %67

62:                                               ; preds = %58
  %63 = load i32, i32* @StdOut, align 4
  %64 = load i32, i32* @STRING_CHCP_ERROR1, align 4
  %65 = call i32* (...) @GetConsoleOutputCP()
  %66 = call i32 @ConResPrintf(i32 %63, i32 %64, i32* %65)
  store i32 0, i32* %3, align 4
  br label %75

67:                                               ; preds = %58
  %68 = load i64, i64* %6, align 8
  %69 = call i64 @SetConsoleCP(i64 %68)
  br label %70

70:                                               ; preds = %67
  br label %71

71:                                               ; preds = %70, %53
  %72 = load i32, i32* @StdErr, align 4
  %73 = load i32, i32* @STRING_CHCP_ERROR4, align 4
  %74 = call i32 @ConResPuts(i32 %72, i32 %73)
  store i32 1, i32* %3, align 4
  br label %75

75:                                               ; preds = %71, %62, %46, %32, %24, %17
  %76 = load i32, i32* %3, align 4
  ret i32 %76
}

declare dso_local i32 @ConInitStdStreams(...) #1

declare dso_local i64 @wcscmp(i32*, i8*) #1

declare dso_local i32 @ConResPuts(i32, i32) #1

declare dso_local i32 @ConResPrintf(i32, i32, i32*) #1

declare dso_local i32* @GetConsoleOutputCP(...) #1

declare dso_local i64 @_wtoi(i32*) #1

declare dso_local i64 @GetConsoleCP(...) #1

declare dso_local i64 @SetConsoleCP(i64) #1

declare dso_local i64 @SetConsoleOutputCP(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
